@@ -3796,14 +3796,13 @@ command to generate the output files.
     </magic>
     <glob pattern="*.ppm"/>
   </mime-type>
-  <mime-type type="image/x-psd">
-    <_comment>PSD image</_comment>
-    <acronym>PSD</acronym>
-    <expanded-acronym>PhotoShop Document</expanded-acronym>
+  <mime-type type="image/vnd.adobe.photoshop">
+    <_comment>Photoshop image</_comment>
     <magic priority="50">
       <match type="string" mask="0xffffffff0000ffffffff" value="8BPS  \000\000\000\000" offset="0"/>
     </magic>
     <glob pattern="*.psd"/>
+    <alias type="image/x-psd"/>
   </mime-type>
   <mime-type type="image/x-rgb">
     <_comment>RGB image</_comment>
