@@ -33,7 +33,7 @@ test.ppm image/x-portable-pixmap
 # Copied from http://bugs.freedesktop.org/show_bug.cgi?id=19811
 test2.ppm image/x-portable-pixmap ox
 test.ps  application/postscript
-test.psd image/x-psd
+test.psd image/vnd.adobe.photoshop
 test.sgi image/x-sgi ox
 test.tga image/x-tga
 test.tif image/tiff
